@startuml Software_de_Loja_Parte2B2_Repositorios_Vendas
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Parte 2B2: Repositório (Vendas, Devoluções e Faturas)

' ╔══════════════════════════════════════╗
' ║         CAMADA DE REPOSITÓRIO        ║
' ║   Implementações (Vendas e Faturas)  ║
' ╚══════════════════════════════════════╝
package "Repositório (Implementações - Vendas e Faturas)" #FFF8EE {

  class VendaRepositorioImpl {
    - conexao : Connection
    + guardar(venda : Venda) : void
    + buscarPorId(id : int) : Venda
    + buscarPendentes() : List~Venda~
    + marcarConfirmadas(ids : List~Integer~) : void
  }

  class FaturaRepositorioImpl {
    - conexao : Connection
    + buscarPorNumero(numeroFatura : String) : Fatura
    + guardar(fatura : Fatura) : void
  }

  class DevolucaoRepositorioImpl {
    - conexao : Connection
    + guardar(devolucao : Devolucao) : void
    + buscarPorFatura(numeroFatura : String) : List~Devolucao~
    + buscarPendentes() : List~Devolucao~
  }

  class FechoDiaRepositorioImpl {
    - conexao : Connection
    + guardar(fecho : FechoDia) : void
    + atualizar(fecho : FechoDia) : void
    + buscarUltimoConfirmado() : FechoDia
  }
}

' Implementações realizam interfaces
VendaRepositorioImpl ..|> VendaRepositorio
FaturaRepositorioImpl ..|> FaturaRepositorio
DevolucaoRepositorioImpl ..|> DevolucaoRepositorio
FechoDiaRepositorioImpl ..|> FechoDiaRepositorio

@enduml